
Motif:  just making this info easily accessible.

		---------------//---------------//---------------
		---------------//---------------//---------------
		
- (rev 462)
Change:	creation of this project, replacing Chazileon as my work folder.
		Ence, Chazileon is now frozen until archival and deletion.

Motif:  Chazileon (Chazi) has no svn history.

		---------------//---------------//---------------
		
- (revs 465 --> 467, 469 --> 471)
Change:	added AutoResolution patch, by Lebidou (autoResolution branch). The main intention of this
		patch, is allowing native resolution after boot, even without graphics acceleration (qe/ci).
		The "side effect" is that it also enables native resolution at boot prompt (Gui).
		The con: doesn't work for all devices!!
		
		AutoResolution=y enables the patch.

  Note: Obviously, it only works in Graphics Mode (Gui). Disabled by default.

  Note: resolution set on theme.plist is overriding the native one set by AutoResolution. For now the
		possible solutions are, remove the boot resolution (boot_width, boot_height) from theme.plist
		or add Graphics Mode=<native resolution> to com.appleBoot.plist.								reminder: ""

Motif:  ... mentioned above. Check the topic for more details:
		http://forum.voodooprojects.org/index.php/topic,1227.0.html

		---------------//---------------//---------------

- (rev 480)
Change: Added Meklort's Modules support, plus Kernel Patcher (Kptchr) module.
		Check Modules.txt for more info.
		Some talk here: http://forum.voodooprojects.org/index.php/topic,1556.0.html
		here: http://forum.voodooprojects.org/index.php/topic,1153.0.html
		and here: http://forum.voodooprojects.org/index.php/topic,1565.0.html
		
  Note: Only i386 arch is supported at the moment; x86_64 support to be added.

Motif:  ... as if, booting vanilla kernel, is not reason enough!?

		---------------//---------------//---------------
		
- (rev )
Change:				template

Motif:

		---------------//---------------//---------------



Azimutz

