@@ -9,11 +9,11 @@ Installation:
 	"old" in RC5 world means before rev 168 (atm).
 
 How to use?
-  - nothing to do! Modules are loaded at startup, before the Gui loads, providing you place
-	them in the correct place (check Issues below).
-	
-  - Symbols.dylib is always and the first module loaded. The booter will still perform as
-	usual if this module fails to load.
+  - Check if a key is needed to activate the module you pretend to use.
+	Modules are loaded at startup, before the Gui loads, providing they are located in
+	the right place (check Issues below).
+
+	---------------//---------------//---------------
 
 What are modules?
   - good question! Well, can't add much on the "geek" side... need to study the stuff so
@@ -22,18 +22,31 @@ What are modules?
 	integrated on boot file like any other Chameleon function; with Modules support Kptchr
 	can now live as a module, freeing the space it occupied on boot file
 	(one of module's advantages).
+	The booter will still perform as usual if a module fails to load.
+	
+Featured modules:
+  - Symbols.dylib: first and always loaded. No key is foreseen for this module.
+	No other module will work if this one fails to load.
 
-Kernel Patcher module:
-  - features cpuid_set, commpage_stuff and lapic_init patches (atm).
+  - KernelPatcher.dylib:
+	- "will" need PatchKernel=y to be enabled.
+  Note:*** this is still under consideration/testing so, for now the patcher is enabled by default***
+	
+	- features cpuid_set, commpage_stuff and lapic_init patches (atm).
 
-  -	as it is, Kptchr allows my Pentium D 925 to boot vanilla kernel, with the help of
-	-legacy flag; to enter x86_64 world i still need to patch the kernel, as the 925 has no
-	Supplemental SSE3 instructions. I assume that, the great majority of the legacy/unsupported
-	processors with at least SSE3 instructions, will benefit of the same treatment!
-	For now let's just say that the only patch needed by the 925 on Legacy Mode(*) is
-	cpuid_set!
+	- as it is, Kptchr allows my Pentium D 925 to boot vanilla kernel, with the help of
+	  -legacy flag; to enter x86_64 world i still need to patch the kernel, as the 925 has
+	  no Supplemental SSE3 instructions. I assume that, the great majority of the
+	  legacy/unsupported processors with at least SSE3 instructions,
+	  will benefit of the same treatment!
+	  Let's just say that the only patch needed by the 925 on Legacy Mode(*) is cpuid_set!
+	
+	- HelloWorld.dylib: just a notifier, i guess :P
 
-(*) For those who "missed" the lesson, Legacy Mode is the mode, 32 bit only cpu's run on OS X.
+
+(*) For those who "missed" the lesson, Legacy Mode is the mode 32 bit only cpu's run on OS X.
+
+	---------------//---------------//---------------
 
 Issues:
   - modules may fail to load, if you have the booter on a separate device/partition and try
@@ -45,6 +58,8 @@ Issues:
   - this is work in progress; i will add updates as Meklort commits and only if they are in
 	functional state.
 
+	---------------//---------------//---------------
+
 
 Smith@@'s news :D
 
@@ -55,6 +70,10 @@ Smith@@'s news :D
 						-------/-/-------
 
   Grazie Amico - Azi
+
+		---------------//---------------//---------------
+
+  Huge thanks fly out to Meklort for this precious work!
 
 		---------------//---------------//---------------
 
