@@ -396,6 +396,7 @@ void common_boot(int biosdev)
         bool tryresume;
         bool tryresumedefault;
         bool forceresume;
+		bool patchKernel = true; //Kptchr - temporarely set to true, ude to testing!
 
         // additional variable for testing alternate kernel image locations on boot helper partitions.
         char     bootFileSpec[512];
@@ -666,7 +667,12 @@ void common_boot(int biosdev)
         } else {
             /* Won't return if successful. */
 			// Notify modules that ExecKernel is about to be called
-			execute_hook("ExecKernel", binary, NULL, NULL, NULL);
+			getBoolForKey(kKPatcherKey, &patchKernel, &bootInfo->bootConfig);
+
+			if (patchKernel == true)
+			{
+				execute_hook("ExecKernel", binary, NULL, NULL, NULL);
+			}
             ret = ExecKernel(binary);
         }
     }
