@@ -97,6 +97,7 @@
 #define kTestConfigKey		"config"			// stringTable.c
 #define kCanOverrideKey		"CanOverride"		// stringTable.c
 #define kAutoResolutionKey	"AutoResolution"	// boot.c
+#define kKPatcherKey		"PatchKernel"		// boot.c
 
 /*
  * Flags to the booter and/or kernel - these end with "Flag".
