@@ -4,12 +4,13 @@
  */
 
 #include "libsaio.h"
+#include "modules.h" //Azi:warning
 
 
 void helloWorld(void* binary, void* arg2, void* arg3, void* arg4)
 {
 	printf("Hello world from ExecKernel hook. Binary located at 0x%X\n", binary);
-	getc();
+	//getc();
 	
 }
 
